# django-paystack

./: .gitignore  HISTORY.rst  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
django_paystack/: apps.py  base.py  signals.py  urls.py  views.py
django_paystack/django_paystack/: settings.py  urls.py
django_paystack/templates/: sample.html
django_paystack/templates/django_paystack/: paystack_button.html  sample.htmx
django_paystack/templatetags/: paystack.py
paystack/: signals.py  views.py
paystack/templates/: paystack_button.html
paystack/templatetags/: paystack.py
test_project/: settings.py  urls.py
