[metadata]
name = django-paystack
version = 0.2
description = A Simple Payment wrapper for the Paystack package for the Django Framework
long_description = file: README.rst
url = https://github.com/KingNonso/django-paystack
author = Chinonso Ani
author_email = achinonso@gmail.com
license = MIT License 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 3.2
    pypaystack2 == 2.0.3  